TheMightyDude (01 October 2012)
--------------------------------------
Fixed Notice: Undefined index: l_login_closed_message in includes/check_login.php on line 133 
Fixed Notice: Undefined index: l_login_closed_message in includes/check_login.php on line 135
Fixed bug in includes/create_schema.php where it was failing to create the news table.
Fixed the News Ticker so it now works, my bad, I left some debug code in there.
Fixed missing language variable "l_tdr_edit" should be using "l_edit" in traderoute.php.
Fixed ERROR: Column 'subject' cannot be null in mailto.php may need to be added into the language files.

TheMightyDude (30 September 2012)
--------------------------------------
Fixed Warning: include(./calc_ownership.php): failed to open stream: No such file or directory in includes/db_kill_player.php on line 68 
Fixed Warning: include(): Failed opening './calc_ownership.php' for inclusion (include_path='.') in includes/db_kill_player.php on line 68 
Fixed Fatal error: Call to undefined function calc_ownership() in includes/db_kill_player.php on line 69 
Fixed multi includes (SIGH) to calc_onwership.php when in planet combat.

TheMightyDude (26 September 2012)
--------------------------------------
Fixed bug that when replying to a message it was sent to the sender and not yourself.
Fixed PHP Fatal error: Call to undefined function ship_to_ship() in includes/planet_combat.php on line 402

TheKabal (22 September 2012)
--------------------------------------
Add rich text editing via CKeditor
Add HTML filtering of rich text submissions via HTML purifier

TheMightyDude (23 September 2012)
--------------------------------------
Did a quick fix on the admin section to allow the displaying of admin module templates, this may need some work to get right, but its working for now.

TheKabal (22 September 2012)
--------------------------------------
Template driven admin.php

TheMightyDude (22 September 2012)
--------------------------------------