@@ -358,7 +358,7 @@ if (!is_bool($planetinfo) && $planetinfo != false )
         elseif ($command == "cname")
         {
             // Name2 menu
-            $new_name = trim (htmlentities ($_POST['new_name']);
+            $new_name = trim (htmlentities ($_POST['new_name']) );
             $result5 = $db->Execute("UPDATE {$db->prefix}planets SET name = ? WHERE planet_id = ?;", array ($new_name, $planet_id));
             db_op_result ($db, $result5, __LINE__, __FILE__);
             echo "$l_planet_cname $new_name.";
