@@ -1,3 +1,9 @@
+TheMightyDude (03 October 2012)
+--------------------------------------
+Fixed PHP Parse error: syntax error, unexpected ';' in planet.php on line 361
+Fixed PHP Notice: Undefined index: email in login2.php on line 25
+Fixed PHP Notice: Undefined index: ip_address in login2.php on line 70
+
 TheMightyDude (01 October 2012)
 --------------------------------------
 Fixed Notice: Undefined index: l_login_closed_message in includes/check_login.php on line 133 
